[metadata]
name = cobertura_merge
version = 0.1.0
description = A Utility to merge multiple cobertura xml files into one.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sak96/cobertura_merge
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires =
  wheel
install_requires =
  pydantic==1.9
  xmltodict==0.12
python_requires = >=3.7

[options.extras_require]
dev =
  nox
  pre-commit

[options.packages.find]
include =
  cobertura_merge
  cobertura_merge.*

[options.entry_points]
console_scripts =
    cobertura-merge = cobertura_merge:main

[bdist_wheel]
universal = True

[mypy]
plugins = pydantic.mypy
exclude = .git/|__pycache__/|.venv/|.nox/|build/|dist/
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

[mypy-xmltodict]
ignore_missing_imports = True

# black: https://web.archive.org/web/20210911002521/https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html

[isort]
# black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

skip_glob = .git/,__pycache__/,.venv/,.nox/,build/,dist/

[pylint]
# black
max-line-length = 88

ignore = .git,__pycache__,.venv,.nox,build,dist

[pylint.messages_control]
# black
disable = C0330, C0326k

# https://github.com/samuelcolvin/pydantic/issues/1961
extension-pkg-whitelist = pydantic

[flake8]
# black
max-line-length = 88
extend-ignore = E203

# https://pypi.org/project/mccabe/
max-complexity = 10

exclude = .git/,__pycache__/,.venv/,.nox/,build/,dist/

[pycodestyle]
# black
max-line-length = 88

exclude = .git/,__pycache__/,.venv/,.nox/,build/,dist/

[draglint]
message_template={path}:{line}[{obj}]{msg_id}=>{msg}
